<?xml version="1.0"?>
<package format="2">
  <name>ros_gazebo_utils</name>
  <version>0.0.0</version>
  <description>gazebo utils</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf</depend>


</package>
